# Agentic-AI-Engineering-Workshop

./: .gitignore  README.md  pyproject.toml
deep_research/: lab1.ipynb  lab2.ipynb
engineering_team/team/: README.md  pyproject.toml
engineering_team/team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engineering_team/team/src/team/: crew.py  main.py
engineering_team/team/src/team/config/: agents.yaml  tasks.yaml
trading_floor/: accounts.db  accounts_client.py  accounts_server.py  app.py  lab1.ipynb  lab2.ipynb  lab3.ipynb  market_server.py  mcp_params.py  templates.py  tracers.py  traders.py  trading_floor.py  utils.py
trading_floor/memory/: Cathie.db  ed.db
trading_floor/sandbox/: banoffee.md
