[project]
name = "team"
version = "0.1.0"
description = "team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
team = "team.main:run"
run_crew = "team.main:run"
train = "team.main:train"
replay = "team.main:replay"
test = "team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
